fixed overflow

--- a/websites/Project01/Level/style.css
+++ b/websites/Project01/Level/style.css
@@ -182,6 +182,7 @@ input{
 	gap: 1vh;
 	align-items: center;
 	flex-direction: column;
+	overflow: visible;
 }
 
 .Settings{
@@ -197,6 +198,7 @@ input{
 	flex-direction: column;
 	justify-content: space-around;
 	transition-duration: 1s;
+	overflow: visible;
 }
 
 
